
  Closes #5322

* Added a ``testutil`` extra require to the packaging, as ``gitpython`` should not be a dependency
  all the time but is still required to use the primer helper code in ``pylint.testutil``. You can
  install it with ``pip install pylint[testutil]``.

  Closes #5486

* Reinstated checks from the python3 checker that are still useful for python 3
  (``eq-without-hash``)

  Closes #5025

* Added several checkers to deal with unicode security issues
  (see `Trojan Sources <https://trojansource.codes/>`_ and
  `PEP 672 <https://www.python.org/dev/peps/pep-0672/>`_ for details) that also
  concern the readability of the code. In detail the following checks were added:

  * ``bad-file-encoding`` checks that the file is encoded in UTF-8 as suggested by
    `PEP8 <https://www.python.org/dev/peps/pep-0008/#id20>`_.
    UTF-16 and UTF-32 are `not supported by Python <https://bugs.python.org/issue1503789>`_
    at the moment. If this ever changes
    ``invalid-unicode-codec`` checks that they aren't used, to allow for backwards
    compatibility.

  * ``bidirectional-unicode`` checks for bidirectional unicode characters that
    could make code execution different than what the user expects.

  * ``invalid-character-backspace``, ``invalid-character-carriage-return``,
    ``invalid-character-sub``, ``invalid-character-esc``,
    ``invalid-character-zero-width-space`` and ``invalid-character-nul``
    to check for possibly harmful unescaped characters.

  Closes #5281

* Fix false positive - Allow unpacking of ``self`` in a subclass of ``typing.NamedTuple``.

 Closes #5312

* Fixed false negative ``unpacking-non-sequence`` when value is an empty list.

 Closes #5707

* Better warning messages for useless else or elif when a function returns early.

  Closes #5614

* Fixed false positive ``consider-using-dict-comprehension`` when creating a dict
  using a list of tuples where key AND value vary depending on the same condition.

  Closes #5588
