@@ -107,7 +107,8 @@ Other Changes
   Closes #352
 
 * Reinstated checks from the python3 checker that are still useful for python 3
-  (``eq-without-hash``)
+  (``eq-without-hash``). This is now in the ``pylint.extensions.python3`` optional
+  extension.
 
   Closes #5025
 
