@@ -10,7 +10,7 @@ def say_hello(some_argument):
     return [some_argument * some_value for some_value in range(10)]
 
 
-class MyClass:  # [invalid-name, eq-without-hash]]
+class MyClass:  # [invalid-name]
     def __init__(self, arg_x):
         self._my_secret_x = arg_x
 
