@@ -50,7 +50,8 @@ Release date: TBA
   Closes #5486
 
 * Reinstated checks from the python3 checker that are still useful for python 3
-  (``eq-without-hash``)
+  (``eq-without-hash``). This is now in the ``pylint.extensions.python3`` optional
+  extension.
 
   Closes #5025
 
